# chronicle

./: Dockerfile  README.md  kubernetes.yaml  main.py  pyproject.toml
.github/workflows/: actions.yml
chronicle/: chronicle.py  cli.py  data.py  util.py  web.py
chronicle/templates/: index.html
chronicle/web/: index.html
tests/: test_data.py
