[tool.poetry]
name = "chronicle"
version = "0.1.0"
description = ""
authors = ["Matthew Coleman <matthew@eudaimonia.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# aiobungie = "^0.2.8"
aiobungie = {path = "../../others/nxtlo/aiobungie", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
