[tool.poetry]
name = "chronicle"
version = "0.1.0"
description = ""
authors = ["Matthew Coleman <matthew@eudaimonia.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# aiobungie = "^0.2.8"
aiobungie = {path = "../../others/nxtlo/aiobungie", develop = true}
rich = "^13.7.0"
click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
