[tool.poetry]
name = "chronicle"
version = "0.1.0"
description = ""
authors = ["Matthew Coleman <matthew@eudaimonia.io>"]
readme = "README.md"

[tool.poetry.dependencies]
# aiobungie = {path = "../../others/nxtlo/aiobungie", develop = true}
aiobungie = "^0.2.11"
click = "^8.1.7"
python = "~3.11.0"
rich = "^13.7.0"
flask = "^3.0.2"
dominate = "^2.9.1"
structlog = "^24.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
